--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <title>Articles</title>
 <style>
+h1 {padding-left:0.5em;}
 h3 {padding-left:1em;}
 b {padding-left:2em; }
 </style>
@@ -14,17 +15,16 @@ b {padding-left:2em; }
 <b><a href="https://medium.com/@chichinghsu">CCHsu @medium</a></b><br>
 <b>Contact: hsuch (at) ethz.ch </b>
 
-<h3>最新文章</h3>
+<h3>最新文章 New Articles</h3>
+<b>Jun 11, 2021</b> <a href="https://chichinghsu.medium.com/%E6%AF%8F%E5%A4%A9%E4%BB%94%E7%B4%B0%E8%A7%80%E5%AF%9F%E9%81%8B%E5%8B%95-20cb9b75818b">每天仔細觀察運動</a><br>
 <b>May 29, 2021</b> <a href="https://chichinghsu.medium.com/%E6%8B%89%E8%B5%AB%E6%9B%BC%E5%B0%BC%E8%AB%BE%E5%A4%AB%E7%9A%84%E7%AC%AC%E4%BA%8C%E9%8B%BC%E7%90%B4%E5%8D%94%E5%A5%8F%E6%9B%B2%E6%AF%94%E8%BC%83%E5%A5%BD%E8%81%BD%E9%82%84%E6%98%AF%E7%AC%AC%E4%B8%89-31dac58da57b">拉赫曼尼諾夫的第二鋼琴協奏曲比較好聽還是第三？</a><br>
 <b>May 15, 2021</b> <a href="https://chichinghsu.medium.com/%E5%88%A5%E8%AE%93%E6%88%91%E8%B5%B0-%E5%BF%B5%E5%A4%A9%E5%9C%B0%E4%B9%8B%E6%82%A0%E6%82%A0-9a6467983055">《別讓我走》念天地之悠悠</a><br>
 <b>Apr 30, 2021</b> <a href="https://chichinghsu.medium.com/%E5%8E%9F%E5%AD%90%E7%BF%92%E6%85%A3-%E6%88%91%E5%B0%B1%E7%88%9B%E9%82%84%E6%98%AF%E6%88%91%E5%B0%B1%E6%87%B6-216232ebe3c7">《原子習慣》我就爛還是我就懶？</a><br>
 <b>Apr 16, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E4%B8%89%E5%AF%B6%E5%85%A5%E9%96%80%E7%B0%A1%E4%BB%8B-e16e6751c910">瑞士三寶入門簡介</a><br>
-<b>Mar 28, 2021</b> <a href="https://chichinghsu.medium.com/%E9%AE%AD%E9%AD%9A%E5%BB%81%E6%89%80%E5%A5%87%E8%AB%87-fc9f891c0fb8">鮭魚廁所奇談
-</a><br>
-<b>Mar 13, 2021</b> <a href="https://chichinghsu.medium.com/%E5%90%84%E7%A8%AE%E8%A7%A3%E6%B1%BA%E5%95%8F%E9%A1%8C%E7%9A%84%E6%96%B9%E6%B3%95-207b24085144">各種解決問題的方法</a><br>
 
 
-<h3>如果你不知道要看哪篇</h3>
+
+<h3>如果你不知道要看哪篇 Random Articles</h3>
 <b>[申請學校] <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a></b><br>
 <b>[廢文] <a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6"> 在家工作雜談與 2021的暴雪</a><br>
 <b>[廢文] <a href="https://medium.com/@chichinghsu/%E6%88%91%E8%88%87%E5%8F%B0%E7%81%A3%E4%B8%8D%E7%9B%B8%E8%A6%8B%E5%B7%B2%E4%BA%8C%E5%B9%B4%E9%A4%98%E4%BA%86-dbad2ffe4593"> 我與台灣不相見已二年餘了</a></b><br>
@@ -75,6 +75,7 @@ b {padding-left:2em; }
 <b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
 
 <h3>其他 Others</h3>
+<b>Jun 11, 2021</b> <a href="https://chichinghsu.medium.com/%E6%AF%8F%E5%A4%A9%E4%BB%94%E7%B4%B0%E8%A7%80%E5%AF%9F%E9%81%8B%E5%8B%95-20cb9b75818b">每天仔細觀察運動</a><br>
 <b>Mar 28, 2021</b> <a href="https://chichinghsu.medium.com/%E9%AE%AD%E9%AD%9A%E5%BB%81%E6%89%80%E5%A5%87%E8%AB%87-fc9f891c0fb8">鮭魚廁所奇談
 </a><br>
 <b>Mar 13, 2021</b> <a href="https://chichinghsu.medium.com/%E5%90%84%E7%A8%AE%E8%A7%A3%E6%B1%BA%E5%95%8F%E9%A1%8C%E7%9A%84%E6%96%B9%E6%B3%95-207b24085144">各種解決問題的方法</a><br>
