--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>Jun 30, 2021</b> <a href="https://chichinghsu.medium.com/%E6%9C%80%E8%BF%91%E9%83%BD%E5%8D%88%E5%BE%8C%E9%9B%B7%E9%99%A3%E9%9B%A8%E9%82%84%E4%B8%8B%E5%86%B0%E9%9B%B9-b5e6b2f1c664">最近都午後雷陣雨還下冰雹</a><br>
 <b>Jun 11, 2021</b> <a href="https://chichinghsu.medium.com/%E6%AF%8F%E5%A4%A9%E4%BB%94%E7%B4%B0%E8%A7%80%E5%AF%9F%E9%81%8B%E5%8B%95-20cb9b75818b">每天仔細觀察運動</a><br>
 <b>May 29, 2021</b> <a href="https://chichinghsu.medium.com/%E6%8B%89%E8%B5%AB%E6%9B%BC%E5%B0%BC%E8%AB%BE%E5%A4%AB%E7%9A%84%E7%AC%AC%E4%BA%8C%E9%8B%BC%E7%90%B4%E5%8D%94%E5%A5%8F%E6%9B%B2%E6%AF%94%E8%BC%83%E5%A5%BD%E8%81%BD%E9%82%84%E6%98%AF%E7%AC%AC%E4%B8%89-31dac58da57b">拉赫曼尼諾夫的第二鋼琴協奏曲比較好聽還是第三？</a><br>
 <b>May 15, 2021</b> <a href="https://chichinghsu.medium.com/%E5%88%A5%E8%AE%93%E6%88%91%E8%B5%B0-%E5%BF%B5%E5%A4%A9%E5%9C%B0%E4%B9%8B%E6%82%A0%E6%82%A0-9a6467983055">《別讓我走》念天地之悠悠</a><br>
@@ -67,14 +68,8 @@ b {padding-left:2em; }
 <b>Jan 2, 2019</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E9%9B%9E%E8%9B%8B%E5%88%86%E9%A1%9E-%E7%82%BA%E4%BB%80%E9%BA%BC%E5%83%B9%E5%B7%AE%E9%82%A3%E9%BA%BC%E5%A4%A7-%E8%9B%8B%E8%9B%8B%E7%9A%84%E5%93%80%E5%82%B7-%E8%AB%87%E4%BA%BA%E9%81%93-%E5%8B%95%E7%89%A9%E9%81%93-85bee19f8eee">瑞士雞蛋分類，為什麼價差那麼大？蛋蛋的哀傷，談人道（動物道）</a><br>
 <b>Dec 29, 2018</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E7%94%A8%E4%BB%80%E9%BA%BC%E8%AA%9E%E8%A8%80-%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AFlogo%E4%BA%82%E8%AB%87-f0859a5f728c">瑞士用什麼語言？怎麼簡寫CH？瑞士鐵路LOGO亂談</a>
 
-<h3>遊記 Travel</h3>
-<b>July 31, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2020-%E5%B9%B4%E5%88%9D-7d8e90f0f1da">英國倫敦 2020 年初
-</a><br>
-<b>May 12, 2020</b> <a href="https://medium.com/@chichinghsu/%E5%81%87%E6%96%B0%E8%81%9E%E7%9A%84%E7%94%A2%E5%9C%B0-%E5%8C%97%E9%A6%AC%E5%85%B6%E9%A0%93%E5%85%B1%E5%92%8C%E5%9C%8B%E4%B9%8B%E6%97%85-18bc667654d">假新聞的產地？北馬其頓共和國之旅</a><br>
-<b>Nov 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%90%89%E7%88%BE%E5%90%89%E6%96%AF-kyrgyzstan-%E4%B9%8B%E6%97%85-9637ced4238d">吉爾吉斯 (Kyrgyzstan)之旅</a><br>
-<b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
-
 <h3>其他 Others</h3>
+<b>Jun 30, 2021</b> <a href="https://chichinghsu.medium.com/%E6%9C%80%E8%BF%91%E9%83%BD%E5%8D%88%E5%BE%8C%E9%9B%B7%E9%99%A3%E9%9B%A8%E9%82%84%E4%B8%8B%E5%86%B0%E9%9B%B9-b5e6b2f1c664">最近都午後雷陣雨還下冰雹</a><br>
 <b>Jun 11, 2021</b> <a href="https://chichinghsu.medium.com/%E6%AF%8F%E5%A4%A9%E4%BB%94%E7%B4%B0%E8%A7%80%E5%AF%9F%E9%81%8B%E5%8B%95-20cb9b75818b">每天仔細觀察運動</a><br>
 <b>Mar 28, 2021</b> <a href="https://chichinghsu.medium.com/%E9%AE%AD%E9%AD%9A%E5%BB%81%E6%89%80%E5%A5%87%E8%AB%87-fc9f891c0fb8">鮭魚廁所奇談
 </a><br>
@@ -84,6 +79,13 @@ b {padding-left:2em; }
 <b>Jul 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%AD%B8%E7%BF%92%E5%BE%B7%E6%96%87%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%88%87-testdaf-%E5%BE%B7%E7%A6%8F%E8%80%83%E8%A9%A6%E6%BA%96%E5%82%99%E5%BF%83%E5%BE%97-835b78d9a08">學習德文心路歷程與 TestDaF 德福考試準備心得</a><br>
 <b>Feb 3, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%82%84%E6%98%AF%E8%A6%81%E6%9C%89%E4%B8%80%E6%8A%80%E4%B9%8B%E9%95%B7%E5%95%8A-be28ad188fac">還是要有一技之長啊！</a><br>
 <b>Jan 8, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%9D%B1%E6%96%B9%E5%BF%AB%E8%BB%8A%E8%AC%80%E6%AE%BA%E6%A1%88-%E7%9C%9F%E7%9A%84%E6%9C%89%E9%80%99%E6%A2%9D%E8%B7%AF%E7%B7%9A-%E8%B7%9F%E8%91%97-google-maps%E8%B5%B0%E4%B8%80%E8%B6%9F-80413df3b390">東方快車謀殺案，真的有這條路線？跟著 Google Maps走一趟</a>
+
+<h3>遊記 Travel</h3>
+<b>July 31, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2020-%E5%B9%B4%E5%88%9D-7d8e90f0f1da">英國倫敦 2020 年初
+</a><br>
+<b>May 12, 2020</b> <a href="https://medium.com/@chichinghsu/%E5%81%87%E6%96%B0%E8%81%9E%E7%9A%84%E7%94%A2%E5%9C%B0-%E5%8C%97%E9%A6%AC%E5%85%B6%E9%A0%93%E5%85%B1%E5%92%8C%E5%9C%8B%E4%B9%8B%E6%97%85-18bc667654d">假新聞的產地？北馬其頓共和國之旅</a><br>
+<b>Nov 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%90%89%E7%88%BE%E5%90%89%E6%96%AF-kyrgyzstan-%E4%B9%8B%E6%97%85-9637ced4238d">吉爾吉斯 (Kyrgyzstan)之旅</a><br>
+<b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
 
 <h3>電影與影集 Movies and Series</h3>
 <b>Nov 20, 2020</b> <a href="https://chichinghsu.medium.com/%E8%93%8B%E8%8C%B2%E4%B9%8B%E9%81%93-%E7%96%91%E9%9B%A3%E8%A7%A3%E6%B3%95-%E6%88%91%E5%80%91%E4%B8%8D%E4%B8%80%E6%A8%A3-%E4%BD%86%E4%B9%9F%E6%B2%92%E9%82%A3%E9%BA%BC%E4%B8%8D%E4%B8%80%E6%A8%A3-442d6f9995e7">《蓋茲之道：疑難解法》我們不一樣，但也沒那麼不一樣</a><br>
