--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>July 30, 2021</b> <a href="https://chichinghsu.medium.com/%E7%A2%A9%E5%A3%AB%E8%AB%96%E6%96%87%E9%81%87%E5%88%B0%E5%A4%A7%E7%93%B6%E9%A0%B8-4f12ac950e5a">碩士論文遇到大瓶頸</a><br>
 <b>July 17, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A2%AB%E8%A8%8E%E5%8E%AD%E7%9A%84%E5%8B%87%E6%B0%A3-%E4%BA%8C%E9%83%A8%E6%9B%B2%E5%AE%8C%E7%B5%90%E7%AF%87-%E6%88%91%E5%B7%B2%E7%B6%93%E6%B2%92%E5%AF%A6%E9%AB%94%E4%B8%AD%E6%96%87%E6%9B%B8%E5%8F%AF%E7%9C%8B%E4%BA%86-4bbd17de961c">《被討厭的勇氣 二部曲完結篇》我已經沒實體中文書可看了</a><br>
 <b>Jun 30, 2021</b> <a href="https://chichinghsu.medium.com/%E6%9C%80%E8%BF%91%E9%83%BD%E5%8D%88%E5%BE%8C%E9%9B%B7%E9%99%A3%E9%9B%A8%E9%82%84%E4%B8%8B%E5%86%B0%E9%9B%B9-b5e6b2f1c664">最近都午後雷陣雨還下冰雹</a><br>
 <b>Jun 11, 2021</b> <a href="https://chichinghsu.medium.com/%E6%AF%8F%E5%A4%A9%E4%BB%94%E7%B4%B0%E8%A7%80%E5%AF%9F%E9%81%8B%E5%8B%95-20cb9b75818b">每天仔細觀察運動</a><br>
-<b>May 29, 2021</b> <a href="https://chichinghsu.medium.com/%E6%8B%89%E8%B5%AB%E6%9B%BC%E5%B0%BC%E8%AB%BE%E5%A4%AB%E7%9A%84%E7%AC%AC%E4%BA%8C%E9%8B%BC%E7%90%B4%E5%8D%94%E5%A5%8F%E6%9B%B2%E6%AF%94%E8%BC%83%E5%A5%BD%E8%81%BD%E9%82%84%E6%98%AF%E7%AC%AC%E4%B8%89-31dac58da57b">拉赫曼尼諾夫的第二鋼琴協奏曲比較好聽還是第三？</a><br>
-<b>May 15, 2021</b> <a href="https://chichinghsu.medium.com/%E5%88%A5%E8%AE%93%E6%88%91%E8%B5%B0-%E5%BF%B5%E5%A4%A9%E5%9C%B0%E4%B9%8B%E6%82%A0%E6%82%A0-9a6467983055">《別讓我走》念天地之悠悠</a><br>
 
 <h3>如果你不知道要看哪篇 Random Articles</h3>
 <b>[申請學校] <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a></b><br>
@@ -30,6 +29,7 @@ b {padding-left:2em; }
 <b>[電影] <a href="https://medium.com/@chichinghsu/irrational-man-%E6%84%9B%E6%83%85%E5%A4%B1%E6%8E%A7%E9%BB%9E-%E5%8F%AF%E4%BB%A5%E5%86%8D%E5%A4%B1%E6%8E%A7%E4%B8%80%E9%BB%9E-2d42b989c43a">Irrational Man 《愛情失控點》可以再失控一點</a></b><br>
 
 <h3>碩士生活 ETH Zürich</h3>
+<b>July 30, 2021</b> <a href="https://chichinghsu.medium.com/%E7%A2%A9%E5%A3%AB%E8%AB%96%E6%96%87%E9%81%87%E5%88%B0%E5%A4%A7%E7%93%B6%E9%A0%B8-4f12ac950e5a">碩士論文遇到大瓶頸</a><br>
 <b>Feb 25, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-%E4%BA%8C-%E8%A2%AB%E7%95%B6%E5%95%A6-d6329b73269a">我在台灣的那套讀書方式派不上用場（二）被當啦</a><br>
 <b>Jan 17, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-b21b15a87493">我在台灣的那套讀書方式派不上用場</a><br>
 <b>Jan 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E8%81%AF%E9%82%A6%E7%90%86%E5%B7%A5%E5%AD%B8%E9%99%A2-eth-z%C3%BCrich%E7%94%B3%E8%AB%8B%E5%B0%8F%E5%B0%8F%E5%BF%83%E5%BE%97%E7%B8%BD%E7%B5%90-360766f2aa3c">蘇黎世聯邦理工學院 ETH Zürich申請小小心得總結</a><br>
