--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
-<b>Sept 09, 2021</b> <a href="https://chichinghsu.medium.com/%E8%BF%AA%E5%8D%A1%E8%BE%B2%E5%8E%9F%E4%BE%86%E6%98%AF%E5%8D%81%E9%A0%85%E5%85%A8%E8%83%BD-e282a259850e"></a>迪卡農原來是十項全能<br>
+<b>Sept 09, 2021</b> <a href="https://chichinghsu.medium.com/%E8%BF%AA%E5%8D%A1%E8%BE%B2%E5%8E%9F%E4%BE%86%E6%98%AF%E5%8D%81%E9%A0%85%E5%85%A8%E8%83%BD-e282a259850e">迪卡農原來是十項全能</a><br>
 <b>Aug 15, 2021</b> <a href="https://chichinghsu.medium.com/%E6%BC%B8%E6%BC%B8%E5%BC%8F%E5%BE%AE%E7%9A%84%E9%9B%BB%E5%8F%B0%E8%88%87%E5%A5%A7%E9%81%8B%E7%9A%84%E9%A4%98%E6%B3%A2%E7%9B%AA%E6%BC%BE-4b50ccc279bc">漸漸式微的電台與奧運的餘波盪漾</a><br>
 <b>July 30, 2021</b> <a href="https://chichinghsu.medium.com/%E7%A2%A9%E5%A3%AB%E8%AB%96%E6%96%87%E9%81%87%E5%88%B0%E5%A4%A7%E7%93%B6%E9%A0%B8-4f12ac950e5a">碩士論文遇到大瓶頸</a><br>
 <b>July 17, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A2%AB%E8%A8%8E%E5%8E%AD%E7%9A%84%E5%8B%87%E6%B0%A3-%E4%BA%8C%E9%83%A8%E6%9B%B2%E5%AE%8C%E7%B5%90%E7%AF%87-%E6%88%91%E5%B7%B2%E7%B6%93%E6%B2%92%E5%AF%A6%E9%AB%94%E4%B8%AD%E6%96%87%E6%9B%B8%E5%8F%AF%E7%9C%8B%E4%BA%86-4bbd17de961c">《被討厭的勇氣 二部曲完結篇》我已經沒實體中文書可看了</a><br>
@@ -69,7 +69,7 @@ b {padding-left:2em; }
 <b>Dec 29, 2018</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E7%94%A8%E4%BB%80%E9%BA%BC%E8%AA%9E%E8%A8%80-%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AFlogo%E4%BA%82%E8%AB%87-f0859a5f728c">瑞士用什麼語言？怎麼簡寫CH？瑞士鐵路LOGO亂談</a>
 
 <h3>其他 Others</h3>
-<b>Sept 09, 2021</b> <a href="https://chichinghsu.medium.com/%E8%BF%AA%E5%8D%A1%E8%BE%B2%E5%8E%9F%E4%BE%86%E6%98%AF%E5%8D%81%E9%A0%85%E5%85%A8%E8%83%BD-e282a259850e"></a>迪卡農原來是十項全能<br>
+<b>Sept 09, 2021</b> <a href="https://chichinghsu.medium.com/%E8%BF%AA%E5%8D%A1%E8%BE%B2%E5%8E%9F%E4%BE%86%E6%98%AF%E5%8D%81%E9%A0%85%E5%85%A8%E8%83%BD-e282a259850e">迪卡農原來是十項全能</a><br>
 <b>Aug 15, 2021</b> <a href="https://chichinghsu.medium.com/%E6%BC%B8%E6%BC%B8%E5%BC%8F%E5%BE%AE%E7%9A%84%E9%9B%BB%E5%8F%B0%E8%88%87%E5%A5%A7%E9%81%8B%E7%9A%84%E9%A4%98%E6%B3%A2%E7%9B%AA%E6%BC%BE-4b50ccc279bc">漸漸式微的電台與奧運的餘波盪漾</a><br>
 <b>Jun 30, 2021</b> <a href="https://chichinghsu.medium.com/%E6%9C%80%E8%BF%91%E9%83%BD%E5%8D%88%E5%BE%8C%E9%9B%B7%E9%99%A3%E9%9B%A8%E9%82%84%E4%B8%8B%E5%86%B0%E9%9B%B9-b5e6b2f1c664">最近都午後雷陣雨還下冰雹</a><br>
 <b>Jun 11, 2021</b> <a href="https://chichinghsu.medium.com/%E6%AF%8F%E5%A4%A9%E4%BB%94%E7%B4%B0%E8%A7%80%E5%AF%9F%E9%81%8B%E5%8B%95-20cb9b75818b">每天仔細觀察運動</a><br>
