--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
 <title>Articles</title>
 <style>
 h1 {padding-left:0.5em;}
-h3 {padding-left:1em;}
+h3 {padding-left:1em; }
 b {padding-left:2em; }
+.indent_right{
+  width:70%;
+  display:inline-block;
+  box-sizing:border-box;
+  text-align:left;
+  }
+
+.indent_left{
+  text-align:left;
+  width:16%;
+  display:inline-block;
+  box-sizing:border-box;
+  }
+
 </style>
 </head>
 <body>
@@ -16,20 +30,32 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>Nov 20, 2021</b> <a href=https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%A0%B8%E9%9B%BB%E5%BB%A0%E5%8D%8A%E6%97%A5%E9%81%8A-7fe38fa0ded0">瑞士核電廠半日遊</a><br>
 <b>Nov 10, 2021</b> <a href="https://chichinghsu.medium.com/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2021-%E5%B9%B4%E7%A7%8B-d7d1fced4f0">英國倫敦 2021 年秋</a><br>
 <b>Oct 14, 2021</b> <a href="https://chichinghsu.medium.com/%E6%85%95%E5%B0%BC%E9%BB%91%E7%81%AB%E8%BB%8A%E8%AA%A4%E9%BB%9E%E8%A8%98-7cd6cbf42cfe">慕尼黑火車誤點記</a><br>
 <b>Sept 29, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E9%A6%AC%E5%BE%B7%E9%87%8C-2021%E5%B9%B4%E7%A7%8B-2dc087415b48">西班牙馬德里 2021 年秋</a><br>
-<b>Sept 09, 2021</b> <a href="https://chichinghsu.medium.com/%E8%BF%AA%E5%8D%A1%E8%BE%B2%E5%8E%9F%E4%BE%86%E6%98%AF%E5%8D%81%E9%A0%85%E5%85%A8%E8%83%BD-e282a259850e">迪卡農原來是十項全能</a><br>
+<b>Sept 09, 2021</b> <a href="https://chichinghsu.medium.com/%E8%BF%AA%E5%8D%A1%E8%BE%B2%E5%8E%9F%E4%BE%86%E6%98%AF%E5%8D%81%E9%A0%85%E5%85%A8%E8%83%BD-e282a259850e">迪卡農原來是十項全能</a>
 
+<h3>文章分類 Category</h3>
+<div class="indent_left"><b><a href="#eth_zuerich">碩士生活 ETH Zürich</a></b></div>
+<div class="indent_right"><b><a href="#books">書 Books</a></b></div>
+<div class="indent_left"><b><a href="#switzerland">瑞士 Switzerland</a></b></div>
+<div class="indent_right"><b><a href="#others">其他 Others</a></b></div>
+<div class="indent_left"><b><a href="#travel">遊記 Travel</a></b></div>
+<div class="indent_right"><b><a href="#data">數據分析 Data</a></b></div>
+<div class="indent_left"><b><a href="#architecture">建築 Architecture</a></b></div>
+<div class="indent_right"><b><a href="#movies">電影與影集 Movies and Series</a></b></div>
 
 <h3>如果你不知道要看哪篇 Random Articles</h3>
 <b>[申請學校] <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a></b><br>
-<b>[廢文] <a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6"> 在家工作雜談與 2021的暴雪</a><br>
+<b>[廢文] <a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6"> 在家工作雜談與 2021的暴雪</a></b><br>
 <b>[廢文] <a href="https://medium.com/@chichinghsu/%E6%88%91%E8%88%87%E5%8F%B0%E7%81%A3%E4%B8%8D%E7%9B%B8%E8%A6%8B%E5%B7%B2%E4%BA%8C%E5%B9%B4%E9%A4%98%E4%BA%86-dbad2ffe4593"> 我與台灣不相見已二年餘了</a></b><br>
 <b>[書] <a href="https://medium.com/@chichinghsu/%E6%8B%92%E7%B5%95%E6%89%BF%E8%AA%8D%E4%BA%BA%E7%94%9F%E6%B2%92%E6%9C%89%E6%84%8F%E7%BE%A9-a5ac60e0648c">《人性枷鎖》拒絕承認人生沒有意義</a></b><br>
 <b>[電影] <a href="https://medium.com/@chichinghsu/irrational-man-%E6%84%9B%E6%83%85%E5%A4%B1%E6%8E%A7%E9%BB%9E-%E5%8F%AF%E4%BB%A5%E5%86%8D%E5%A4%B1%E6%8E%A7%E4%B8%80%E9%BB%9E-2d42b989c43a">Irrational Man 《愛情失控點》可以再失控一點</a></b><br>
 
-<h3>碩士生活 ETH Zürich</h3>
+<hr style="width:50%;text-align:left;margin-left:2em;">
+
+<div class="category" id="eth_zuerich"><h3>碩士生活 ETH Zürich</h3></div>
 <b>July 30, 2021</b> <a href="https://chichinghsu.medium.com/%E7%A2%A9%E5%A3%AB%E8%AB%96%E6%96%87%E9%81%87%E5%88%B0%E5%A4%A7%E7%93%B6%E9%A0%B8-4f12ac950e5a">碩士論文遇到大瓶頸</a><br>
 <b>Feb 25, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-%E4%BA%8C-%E8%A2%AB%E7%95%B6%E5%95%A6-d6329b73269a">我在台灣的那套讀書方式派不上用場（二）被當啦</a><br>
 <b>Jan 17, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-b21b15a87493">我在台灣的那套讀書方式派不上用場</a><br>
@@ -37,7 +63,20 @@ b {padding-left:2em; }
 <b>Dec 31, 2018</b> <a href="https://medium.com/@chichinghsu/%E8%AE%80%E6%A9%9F%E5%99%A8%E5%AD%B8%E7%BF%92-ensemble-learning%E6%9C%89%E6%84%9F%E8%80%8C%E7%99%BC%E4%B9%8B%E6%B0%91%E4%B8%BB%E5%88%B6%E5%BA%A6%E7%9A%84%E5%8F%8D%E6%80%9D-9a843f11b291">讀機器學習 Ensemble learning有感而發之民主制度的反思</a><br>
 <b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
 
-<h3>書 Books</h3>
+<div class="category" id="switzerland"><h3>瑞士 Switzerland</h3></div>
+<b>Nov 20, 2021</b> <a href=https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%A0%B8%E9%9B%BB%E5%BB%A0%E5%8D%8A%E6%97%A5%E9%81%8A-7fe38fa0ded0">瑞士核電廠半日遊</a><br>
+<b>May 29, 2021</b> <a href="https://chichinghsu.medium.com/%E6%8B%89%E8%B5%AB%E6%9B%BC%E5%B0%BC%E8%AB%BE%E5%A4%AB%E7%9A%84%E7%AC%AC%E4%BA%8C%E9%8B%BC%E7%90%B4%E5%8D%94%E5%A5%8F%E6%9B%B2%E6%AF%94%E8%BC%83%E5%A5%BD%E8%81%BD%E9%82%84%E6%98%AF%E7%AC%AC%E4%B8%89-31dac58da57b">拉赫曼尼諾夫的第二鋼琴協奏曲比較好聽還是第三？</a><br>
+<b>Apr 16, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E4%B8%89%E5%AF%B6%E5%85%A5%E9%96%80%E7%B0%A1%E4%BB%8B-e16e6751c910">瑞士三寶入門簡介</a><br>
+<b>Jan 31, 2021</b><a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6"> 在家工作雜談與 2021的暴雪</a><br>
+<b>Oct 23, 2020</b><a href="https://chichinghsu.medium.com/%E5%AE%89%E7%A9%A9%E5%B9%B3%E9%A0%86%E6%98%AF%E8%AA%B0%E4%BA%BA%E7%94%9F-2cc54feec2ad"> 安穩平順是誰人生</a><br>
+<b>Sept 18, 2020</b><a href="https://medium.com/@chichinghsu/%E6%88%91%E8%88%87%E5%8F%B0%E7%81%A3%E4%B8%8D%E7%9B%B8%E8%A6%8B%E5%B7%B2%E4%BA%8C%E5%B9%B4%E9%A4%98%E4%BA%86-dbad2ffe4593"> 我與台灣不相見已二年餘了</a><br>
+<b>Aug 23, 2020</b><a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E8%A1%97%E9%A0%AD%E5%85%A9%E5%BC%B5%E6%B5%B7%E5%A0%B1%E8%83%8C%E5%BE%8C%E7%9A%84%E7%A7%98%E5%AF%86-f7b0f802a3c8"> 蘇黎世街頭兩張海報背後的秘密</a><br>
+<b>Jul 12, 2020</b><a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E8%B6%85%E5%B8%82%E8%A3%A1%E7%9A%84%E6%B0%B8%E7%BA%8C%E8%88%87%E7%92%B0%E4%BF%9D-58a621896fc8"> 瑞士超市裡的永續與環保</a><br>
+<b>Apr 4, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E4%B8%AD%E5%A4%AE%E8%BB%8A%E7%AB%99%E7%9A%84%E7%BE%8E%E4%B9%83%E6%BB%8B%E8%A9%A6%E5%90%83%E5%93%81-7cb7ded5e658">蘇黎世中央車站的美乃滋試吃品</a><br>
+<b>Jan 2, 2019</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E9%9B%9E%E8%9B%8B%E5%88%86%E9%A1%9E-%E7%82%BA%E4%BB%80%E9%BA%BC%E5%83%B9%E5%B7%AE%E9%82%A3%E9%BA%BC%E5%A4%A7-%E8%9B%8B%E8%9B%8B%E7%9A%84%E5%93%80%E5%82%B7-%E8%AB%87%E4%BA%BA%E9%81%93-%E5%8B%95%E7%89%A9%E9%81%93-85bee19f8eee">瑞士雞蛋分類，為什麼價差那麼大？蛋蛋的哀傷，談人道（動物道）</a><br>
+<b>Dec 29, 2018</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E7%94%A8%E4%BB%80%E9%BA%BC%E8%AA%9E%E8%A8%80-%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AFlogo%E4%BA%82%E8%AB%87-f0859a5f728c">瑞士用什麼語言？怎麼簡寫CH？瑞士鐵路LOGO亂談</a>
+
+<div class="category" id="books"><h3>書 Books</h3></div>
 <b>July 17, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A2%AB%E8%A8%8E%E5%8E%AD%E7%9A%84%E5%8B%87%E6%B0%A3-%E4%BA%8C%E9%83%A8%E6%9B%B2%E5%AE%8C%E7%B5%90%E7%AF%87-%E6%88%91%E5%B7%B2%E7%B6%93%E6%B2%92%E5%AF%A6%E9%AB%94%E4%B8%AD%E6%96%87%E6%9B%B8%E5%8F%AF%E7%9C%8B%E4%BA%86-4bbd17de961c">《被討厭的勇氣 二部曲完結篇》我已經沒實體中文書可看了</a><br>
 <b>May 15, 2021</b> <a href="https://chichinghsu.medium.com/%E5%88%A5%E8%AE%93%E6%88%91%E8%B5%B0-%E5%BF%B5%E5%A4%A9%E5%9C%B0%E4%B9%8B%E6%82%A0%E6%82%A0-9a6467983055">《別讓我走》念天地之悠悠</a><br>
 <b>Apr 30, 2021</b> <a href="https://chichinghsu.medium.com/%E5%8E%9F%E5%AD%90%E7%BF%92%E6%85%A3-%E6%88%91%E5%B0%B1%E7%88%9B%E9%82%84%E6%98%AF%E6%88%91%E5%B0%B1%E6%87%B6-216232ebe3c7">《原子習慣》我就爛還是我就懶？</a><br>
@@ -51,23 +90,17 @@ b {padding-left:2em; }
 <b>Jun 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%A1%8C%E9%81%8E%E5%9C%B0%E7%8D%84%E4%B9%8B%E8%B7%AF-%E4%BD%A0%E5%8F%AF%E4%BB%A5%E5%B0%8D%E6%8A%97%E5%85%A8%E4%B8%96%E7%95%8C%E5%97%8E-579a107c103d">《行過地獄之路》你可以對抗全世界嗎</a><br>
 <b>Mar 21, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%8B%92%E7%B5%95%E6%89%BF%E8%AA%8D%E4%BA%BA%E7%94%9F%E6%B2%92%E6%9C%89%E6%84%8F%E7%BE%A9-a5ac60e0648c">《人性枷鎖》拒絕承認人生沒有意義</a>
 
-<h3>數據分析 Data</h3>
-<b>Dec 24, 2020</b><a href="https://chichinghsu.medium.com/%E5%8F%B0%E7%81%A3-podcast-2020%E5%B9%B4-12%E6%9C%88%E6%8E%92%E5%90%8D%E8%A7%80%E5%AF%9F%E5%A0%B1%E5%91%8A-ad28f488975d"> 台灣 Podcast 2020年 12月排名觀察報告</a><br>
-<b>Apr 15, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%98%BF%E6%BB%B4%E8%8B%B1%E6%96%87%E6%AD%B7%E5%B9%B4%E6%84%9A%E4%BA%BA%E7%AF%80%E5%BD%B1%E7%89%87%E7%95%99%E8%A8%80%E5%88%86%E6%9E%90-f7731171d29e">阿滴英文歷年愚人節影片留言分析</a>
+<div class="category" id="travel"><h3>遊記 Travel</h3></div>
+<b>Nov 10, 2021</b> <a href="https://chichinghsu.medium.com/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2021-%E5%B9%B4%E7%A7%8B-d7d1fced4f0">英國倫敦 2021 年秋</a><br>
+<b>Oct 14, 2021</b> <a href="https://chichinghsu.medium.com/%E6%85%95%E5%B0%BC%E9%BB%91%E7%81%AB%E8%BB%8A%E8%AA%A4%E9%BB%9E%E8%A8%98-7cd6cbf42cfe">慕尼黑火車誤點記</a><br>
+<b>Sept 29, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E9%A6%AC%E5%BE%B7%E9%87%8C-2021%E5%B9%B4%E7%A7%8B-2dc087415b48">西班牙馬德里 2021 年秋</a><br>
+<b>July 31, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2020-%E5%B9%B4%E5%88%9D-7d8e90f0f1da">英國倫敦 2020 年初
+</a><br>
+<b>May 12, 2020</b> <a href="https://medium.com/@chichinghsu/%E5%81%87%E6%96%B0%E8%81%9E%E7%9A%84%E7%94%A2%E5%9C%B0-%E5%8C%97%E9%A6%AC%E5%85%B6%E9%A0%93%E5%85%B1%E5%92%8C%E5%9C%8B%E4%B9%8B%E6%97%85-18bc667654d">假新聞的產地？北馬其頓共和國之旅</a><br>
+<b>Nov 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%90%89%E7%88%BE%E5%90%89%E6%96%AF-kyrgyzstan-%E4%B9%8B%E6%97%85-9637ced4238d">吉爾吉斯 (Kyrgyzstan)之旅</a><br>
+<b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
 
-<h3>瑞士 Switzerland</h3>
-<b>May 29, 2021</b> <a href="https://chichinghsu.medium.com/%E6%8B%89%E8%B5%AB%E6%9B%BC%E5%B0%BC%E8%AB%BE%E5%A4%AB%E7%9A%84%E7%AC%AC%E4%BA%8C%E9%8B%BC%E7%90%B4%E5%8D%94%E5%A5%8F%E6%9B%B2%E6%AF%94%E8%BC%83%E5%A5%BD%E8%81%BD%E9%82%84%E6%98%AF%E7%AC%AC%E4%B8%89-31dac58da57b">拉赫曼尼諾夫的第二鋼琴協奏曲比較好聽還是第三？</a><br>
-<b>Apr 16, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E4%B8%89%E5%AF%B6%E5%85%A5%E9%96%80%E7%B0%A1%E4%BB%8B-e16e6751c910">瑞士三寶入門簡介</a><br>
-<b>Jan 31, 2021</b><a href="https://chichinghsu.medium.com/%E5%9C%A8%E5%AE%B6%E5%B7%A5%E4%BD%9C%E9%9B%9C%E8%AB%87%E8%88%87-2021%E7%9A%84%E6%9A%B4%E9%9B%AA-fb5f9be5a8d6"> 在家工作雜談與 2021的暴雪</a><br>
-<b>Oct 23, 2020</b><a href="https://chichinghsu.medium.com/%E5%AE%89%E7%A9%A9%E5%B9%B3%E9%A0%86%E6%98%AF%E8%AA%B0%E4%BA%BA%E7%94%9F-2cc54feec2ad"> 安穩平順是誰人生</a><br>
-<b>Sept 18, 2020</b><a href="https://medium.com/@chichinghsu/%E6%88%91%E8%88%87%E5%8F%B0%E7%81%A3%E4%B8%8D%E7%9B%B8%E8%A6%8B%E5%B7%B2%E4%BA%8C%E5%B9%B4%E9%A4%98%E4%BA%86-dbad2ffe4593"> 我與台灣不相見已二年餘了</a><br>
-<b>Aug 23, 2020</b><a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E8%A1%97%E9%A0%AD%E5%85%A9%E5%BC%B5%E6%B5%B7%E5%A0%B1%E8%83%8C%E5%BE%8C%E7%9A%84%E7%A7%98%E5%AF%86-f7b0f802a3c8"> 蘇黎世街頭兩張海報背後的秘密</a><br>
-<b>Jul 12, 2020</b><a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E8%B6%85%E5%B8%82%E8%A3%A1%E7%9A%84%E6%B0%B8%E7%BA%8C%E8%88%87%E7%92%B0%E4%BF%9D-58a621896fc8"> 瑞士超市裡的永續與環保</a><br>
-<b>Apr 4, 2019</b> <a href="https://medium.com/@chichinghsu/%E8%98%87%E9%BB%8E%E4%B8%96%E4%B8%AD%E5%A4%AE%E8%BB%8A%E7%AB%99%E7%9A%84%E7%BE%8E%E4%B9%83%E6%BB%8B%E8%A9%A6%E5%90%83%E5%93%81-7cb7ded5e658">蘇黎世中央車站的美乃滋試吃品</a><br>
-<b>Jan 2, 2019</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E9%9B%9E%E8%9B%8B%E5%88%86%E9%A1%9E-%E7%82%BA%E4%BB%80%E9%BA%BC%E5%83%B9%E5%B7%AE%E9%82%A3%E9%BA%BC%E5%A4%A7-%E8%9B%8B%E8%9B%8B%E7%9A%84%E5%93%80%E5%82%B7-%E8%AB%87%E4%BA%BA%E9%81%93-%E5%8B%95%E7%89%A9%E9%81%93-85bee19f8eee">瑞士雞蛋分類，為什麼價差那麼大？蛋蛋的哀傷，談人道（動物道）</a><br>
-<b>Dec 29, 2018</b> <a href="https://medium.com/@chichinghsu/%E7%91%9E%E5%A3%AB%E7%94%A8%E4%BB%80%E9%BA%BC%E8%AA%9E%E8%A8%80-%E7%91%9E%E5%A3%AB%E9%90%B5%E8%B7%AFlogo%E4%BA%82%E8%AB%87-f0859a5f728c">瑞士用什麼語言？怎麼簡寫CH？瑞士鐵路LOGO亂談</a>
-
-<h3>其他 Others</h3>
+<div class="category" id="others"><h3>其他 Others</h3></div>
 <b>Sept 09, 2021</b> <a href="https://chichinghsu.medium.com/%E8%BF%AA%E5%8D%A1%E8%BE%B2%E5%8E%9F%E4%BE%86%E6%98%AF%E5%8D%81%E9%A0%85%E5%85%A8%E8%83%BD-e282a259850e">迪卡農原來是十項全能</a><br>
 <b>Aug 15, 2021</b> <a href="https://chichinghsu.medium.com/%E6%BC%B8%E6%BC%B8%E5%BC%8F%E5%BE%AE%E7%9A%84%E9%9B%BB%E5%8F%B0%E8%88%87%E5%A5%A7%E9%81%8B%E7%9A%84%E9%A4%98%E6%B3%A2%E7%9B%AA%E6%BC%BE-4b50ccc279bc">漸漸式微的電台與奧運的餘波盪漾</a><br>
 <b>Jun 30, 2021</b> <a href="https://chichinghsu.medium.com/%E6%9C%80%E8%BF%91%E9%83%BD%E5%8D%88%E5%BE%8C%E9%9B%B7%E9%99%A3%E9%9B%A8%E9%82%84%E4%B8%8B%E5%86%B0%E9%9B%B9-b5e6b2f1c664">最近都午後雷陣雨還下冰雹</a><br>
@@ -81,22 +114,14 @@ b {padding-left:2em; }
 <b>Feb 3, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%82%84%E6%98%AF%E8%A6%81%E6%9C%89%E4%B8%80%E6%8A%80%E4%B9%8B%E9%95%B7%E5%95%8A-be28ad188fac">還是要有一技之長啊！</a><br>
 <b>Jan 8, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%9D%B1%E6%96%B9%E5%BF%AB%E8%BB%8A%E8%AC%80%E6%AE%BA%E6%A1%88-%E7%9C%9F%E7%9A%84%E6%9C%89%E9%80%99%E6%A2%9D%E8%B7%AF%E7%B7%9A-%E8%B7%9F%E8%91%97-google-maps%E8%B5%B0%E4%B8%80%E8%B6%9F-80413df3b390">東方快車謀殺案，真的有這條路線？跟著 Google Maps走一趟</a>
 
-<h3>遊記 Travel</h3>
-<b>Nov 10, 2021</b> <a href="https://chichinghsu.medium.com/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2021-%E5%B9%B4%E7%A7%8B-d7d1fced4f0">英國倫敦 2021 年秋</a><br>
-<b>Oct 14, 2021</b> <a href="https://chichinghsu.medium.com/%E6%85%95%E5%B0%BC%E9%BB%91%E7%81%AB%E8%BB%8A%E8%AA%A4%E9%BB%9E%E8%A8%98-7cd6cbf42cfe">慕尼黑火車誤點記</a><br>
-<b>Sept 29, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A5%BF%E7%8F%AD%E7%89%99%E9%A6%AC%E5%BE%B7%E9%87%8C-2021%E5%B9%B4%E7%A7%8B-2dc087415b48">西班牙馬德里 2021 年秋</a><br>
-<b>July 31, 2020</b> <a href="https://medium.com/@chichinghsu/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2020-%E5%B9%B4%E5%88%9D-7d8e90f0f1da">英國倫敦 2020 年初
-</a><br>
-<b>May 12, 2020</b> <a href="https://medium.com/@chichinghsu/%E5%81%87%E6%96%B0%E8%81%9E%E7%9A%84%E7%94%A2%E5%9C%B0-%E5%8C%97%E9%A6%AC%E5%85%B6%E9%A0%93%E5%85%B1%E5%92%8C%E5%9C%8B%E4%B9%8B%E6%97%85-18bc667654d">假新聞的產地？北馬其頓共和國之旅</a><br>
-<b>Nov 5, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%90%89%E7%88%BE%E5%90%89%E6%96%AF-kyrgyzstan-%E4%B9%8B%E6%97%85-9637ced4238d">吉爾吉斯 (Kyrgyzstan)之旅</a><br>
-<b>Mar 11, 2019</b> <a href="https://medium.com/@chichinghsu/%E5%93%88%E8%96%A9%E5%85%8B%E9%98%BF%E6%8B%89%E6%9C%A8%E5%9C%96%E6%A9%9F%E5%A0%B4%E5%A5%87%E9%81%87%E8%A8%98-b559176295ee">哈薩克阿拉木圖機場奇遇記</a>
+<div class="category" id="data"><h3>數據分析 Data</h3></div>
+<b>Dec 24, 2020</b><a href="https://chichinghsu.medium.com/%E5%8F%B0%E7%81%A3-podcast-2020%E5%B9%B4-12%E6%9C%88%E6%8E%92%E5%90%8D%E8%A7%80%E5%AF%9F%E5%A0%B1%E5%91%8A-ad28f488975d"> 台灣 Podcast 2020年 12月排名觀察報告</a><br>
+<b>Apr 15, 2019</b> <a href="https://medium.com/@chichinghsu/%E9%98%BF%E6%BB%B4%E8%8B%B1%E6%96%87%E6%AD%B7%E5%B9%B4%E6%84%9A%E4%BA%BA%E7%AF%80%E5%BD%B1%E7%89%87%E7%95%99%E8%A8%80%E5%88%86%E6%9E%90-f7731171d29e">阿滴英文歷年愚人節影片留言分析</a>
 
-<h3>電影與影集 Movies and Series</h3>
+<div class="category" id="movies"><h3>電影與影集 Movies and Series</h3></div>
 <b>Nov 20, 2020</b> <a href="https://chichinghsu.medium.com/%E8%93%8B%E8%8C%B2%E4%B9%8B%E9%81%93-%E7%96%91%E9%9B%A3%E8%A7%A3%E6%B3%95-%E6%88%91%E5%80%91%E4%B8%8D%E4%B8%80%E6%A8%A3-%E4%BD%86%E4%B9%9F%E6%B2%92%E9%82%A3%E9%BA%BC%E4%B8%8D%E4%B8%80%E6%A8%A3-442d6f9995e7">《蓋茲之道：疑難解法》我們不一樣，但也沒那麼不一樣</a><br>
 <b>June 6, 2020</b> <a href="https://medium.com/@chichinghsu/irrational-man-%E6%84%9B%E6%83%85%E5%A4%B1%E6%8E%A7%E9%BB%9E-%E5%8F%AF%E4%BB%A5%E5%86%8D%E5%A4%B1%E6%8E%A7%E4%B8%80%E9%BB%9E-2d42b989c43a">Irrational Man 《愛情失控點》可以再失控一點</a>
 
-<h3>建築 Architecture</h3>
+<div class="category" id="architecture"><h3>建築 Architecture</h3></div>
 <b>Feb 8, 2019</b> <a href="https://medium.com/@chichinghsu/rem-koolhaas-%E8%91%A1%E8%90%84%E7%89%99-porto-%E4%BD%9C%E5%93%81-casa-da-m%C3%BAsica-%E5%B7%A1%E7%A6%AE-bfeaa180bf9d">Rem Koolhaas 葡萄牙 Porto 作品 Casa da Música 巡禮</a>
-
-
 </body></html> 
