--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>Jan 16, 2022</b> <a href=https://chichinghsu.medium.com/2022-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E6%A0%A1%E5%88%8A%E8%A9%AD%E7%95%B0%E5%9C%96%E7%89%87-b174d80aaf02">2022 年第一篇之校刊詭異圖片</a><br>
 <b>Dec 05, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A7%A3%E6%86%82%E9%9B%9C%E8%B2%A8%E5%BA%97-%E4%BD%95%E4%BB%A5%E8%A7%A3%E6%86%82-%E5%94%AF%E6%9C%89%E9%9B%9C%E8%B2%A8%E5%BA%97-46eebafc9b2e">《解憂雜貨店》何以解憂？唯有雜貨店</a><br>
 <b>Nov 20, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%A0%B8%E9%9B%BB%E5%BB%A0%E5%8D%8A%E6%97%A5%E9%81%8A-7fe38fa0ded0">瑞士核電廠半日遊</a><br>
 <b>Nov 10, 2021</b> <a href="https://chichinghsu.medium.com/%E8%8B%B1%E5%9C%8B%E5%80%AB%E6%95%A6-2021-%E5%B9%B4%E7%A7%8B-d7d1fced4f0">英國倫敦 2021 年秋</a><br>
@@ -56,6 +57,7 @@ b {padding-left:2em; }
 <hr style="width:50%;text-align:left;margin-left:2em;">
 
 <div class="category" id="eth_zuerich"><h3>碩士生活 ETH Zürich</h3></div>
+<b>Jan 16, 2022</b> <a href=https://chichinghsu.medium.com/2022-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E6%A0%A1%E5%88%8A%E8%A9%AD%E7%95%B0%E5%9C%96%E7%89%87-b174d80aaf02">2022 年第一篇之校刊詭異圖片</a><br>
 <b>July 30, 2021</b> <a href="https://chichinghsu.medium.com/%E7%A2%A9%E5%A3%AB%E8%AB%96%E6%96%87%E9%81%87%E5%88%B0%E5%A4%A7%E7%93%B6%E9%A0%B8-4f12ac950e5a">碩士論文遇到大瓶頸</a><br>
 <b>Feb 25, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-%E4%BA%8C-%E8%A2%AB%E7%95%B6%E5%95%A6-d6329b73269a">我在台灣的那套讀書方式派不上用場（二）被當啦</a><br>
 <b>Jan 17, 2019</b> <a href="https://medium.com/@chichinghsu/%E6%88%91%E5%9C%A8%E5%8F%B0%E7%81%A3%E7%9A%84%E9%82%A3%E5%A5%97%E8%AE%80%E6%9B%B8%E6%96%B9%E5%BC%8F%E6%B4%BE%E4%B8%8D%E4%B8%8A%E7%94%A8%E5%A0%B4-b21b15a87493">我在台灣的那套讀書方式派不上用場</a><br>
