--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ b {padding-left:2em; }
 <b>Contact: hsuch (at) ethz.ch </b>
 
 <h3>最新文章 New Articles</h3>
+<b>Feb 5, 2022</b> <a href="https://chichinghsu.medium.com/%E4%B8%80%E9%80%B1%E4%B9%8B%E5%A7%8B%E5%A4%A7%E7%88%AD%E8%AD%B0%E8%88%87%E7%91%9E%E5%A3%AB%E6%80%A5%E6%95%91%E8%AA%B2%E7%A8%8B-48c40ce29d1a">一週之始大爭議與瑞士急救課程</a><br>
 <b>Jan 16, 2022</b> <a href=https://chichinghsu.medium.com/2022-%E5%B9%B4%E7%AC%AC%E4%B8%80%E7%AF%87%E4%B9%8B%E6%A0%A1%E5%88%8A%E8%A9%AD%E7%95%B0%E5%9C%96%E7%89%87-b174d80aaf02">2022 年第一篇之校刊詭異圖片</a><br>
 <b>Dec 05, 2021</b> <a href="https://chichinghsu.medium.com/%E8%A7%A3%E6%86%82%E9%9B%9C%E8%B2%A8%E5%BA%97-%E4%BD%95%E4%BB%A5%E8%A7%A3%E6%86%82-%E5%94%AF%E6%9C%89%E9%9B%9C%E8%B2%A8%E5%BA%97-46eebafc9b2e">《解憂雜貨店》何以解憂？唯有雜貨店</a><br>
 <b>Nov 20, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%A0%B8%E9%9B%BB%E5%BB%A0%E5%8D%8A%E6%97%A5%E9%81%8A-7fe38fa0ded0">瑞士核電廠半日遊</a><br>
@@ -66,6 +67,7 @@ b {padding-left:2em; }
 <b>Dec 27, 2018</b> <a href="https://medium.com/@chichinghsu/eth-z%C3%BCrich-%E5%BF%83%E8%B7%AF%E6%AD%B7%E7%A8%8B%E8%A8%98%E9%8C%84%E8%B5%B7%E4%BE%86-8c84131b2130">蘇黎世聯邦理工大學 ETH Zürich 心路歷程記錄起來</a>
 
 <div class="category" id="switzerland"><h3>瑞士 Switzerland</h3></div>
+<b>Feb 5, 2022</b> <a href="https://chichinghsu.medium.com/%E4%B8%80%E9%80%B1%E4%B9%8B%E5%A7%8B%E5%A4%A7%E7%88%AD%E8%AD%B0%E8%88%87%E7%91%9E%E5%A3%AB%E6%80%A5%E6%95%91%E8%AA%B2%E7%A8%8B-48c40ce29d1a">一週之始大爭議與瑞士急救課程</a><br>
 <b>Nov 20, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E6%A0%B8%E9%9B%BB%E5%BB%A0%E5%8D%8A%E6%97%A5%E9%81%8A-7fe38fa0ded0">瑞士核電廠半日遊</a><br>
 <b>May 29, 2021</b> <a href="https://chichinghsu.medium.com/%E6%8B%89%E8%B5%AB%E6%9B%BC%E5%B0%BC%E8%AB%BE%E5%A4%AB%E7%9A%84%E7%AC%AC%E4%BA%8C%E9%8B%BC%E7%90%B4%E5%8D%94%E5%A5%8F%E6%9B%B2%E6%AF%94%E8%BC%83%E5%A5%BD%E8%81%BD%E9%82%84%E6%98%AF%E7%AC%AC%E4%B8%89-31dac58da57b">拉赫曼尼諾夫的第二鋼琴協奏曲比較好聽還是第三？</a><br>
 <b>Apr 16, 2021</b> <a href="https://chichinghsu.medium.com/%E7%91%9E%E5%A3%AB%E4%B8%89%E5%AF%B6%E5%85%A5%E9%96%80%E7%B0%A1%E4%BB%8B-e16e6751c910">瑞士三寶入門簡介</a><br>
